--- a/TrappedInside.Shell/TrappedInside.Shell.csproj
+++ b/TrappedInside.Shell/TrappedInside.Shell.csproj
@@ -15,4 +15,8 @@
       <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Spectre.Console" Version="0.49.1" />
+    </ItemGroup>
+
 </Project>
