--- a/TrappedInside.Shell/TrappedInside.Shell.csproj
+++ b/TrappedInside.Shell/TrappedInside.Shell.csproj
@@ -19,4 +19,8 @@
       <PackageReference Include="Spectre.Console" Version="0.49.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\TrappedInside.Core\TrappedInside.Core.csproj" />
+    </ItemGroup>
+
 </Project>
